--- a/Jambalaya.html
+++ b/Jambalaya.html
@@ -18,5 +18,35 @@
     <h2>Description</h2>
     <p>Delicious Jambalaya to satisfy your comfort food craving!</p> 
     <h2>Ingredients</h2>
-</body>
+    <ul>
+        <li>2 tablespoons peanut oil, divided</li>
+        <li>1 tablespoon Cajun seasoning</li>
+        <li>10 ounces andouille sausage, sliced into rounds</li>
+        <li>1 pound boneless skinless chicken breasts, cut into 1-inch pieces</li>
+        <li>1 medium onion, diced</li>
+        <li>1 small green bell pepper, diced</li>
+        <li>2 ribs celery, diced</li>
+        <li>3 cloves garlic, minced</li>
+        <li>1 (16 ounce) can crushed Italian tomatoes</li>
+        <li>½ teaspoon red pepper flakes</li>
+        <li>½ teaspoon ground black pepper</li>
+        <li>1 teaspoon salt, or to taste</li>
+        <li>½ teaspoon hot pepper sauce</li>
+        <li>2 teaspoons Worcestershire sauce</li>
+        <li>1 teaspoon file powder</li>
+        <li>1 ¼ cups uncooked white rice</li>
+        <li>2 ½ cups chicken broth</li>
+        <h2>Directions</h2>
+        <ol>
+            <li>Gather all ingredients.</li>
+            <li>Heat 1 tablespoon of peanut oil in a large heavy Dutch oven over medium heat. Season sausage and chicken pieces with Cajun seasoning. Sauté sausage until browned. Remove with slotted spoon, and set aside.</li>
+            <li>Add 1 tablespoon peanut oil, and sauté chicken pieces until lightly browned on all sides. Remove with a slotted spoon, and set aside.</li>
+            <li>In the same pot, sauté onion, bell pepper, celery, and garlic until tender.</li>
+            <li>In the same pot, sauté onion, bell pepper, celery, and garlic until tender.</li>
+            <li>Stir in chicken and sausage. Cook for 10 minutes, stirring occasionally.</li>
+            <li>Stir in the rice and chicken broth.</li>
+            <li>Bring to a boil, reduce heat, and simmer for 20 to 25 minutes, or until liquid is absorbed.</li>
+            <li>Serve and enjoy!</li>
+        </ol>
+    </ul>
 </html>
