--- a/index.html
+++ b/index.html
@@ -8,9 +8,20 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="/odin-recipes/lasagna.html">Homemade Lasagna</a>
-    <a href="/odin-recipes/Jambalaya.html">Jambalaya</a>
-    <a href="/odin-recipes/New Orleans Mac and Cheese.html">New Orleans Mac and Cheese</a>
+    <ul>
+        <li>
+             <a href="/odin-recipes/lasagna.html">Homemade Lasagna</a>
+        </li>
+        <li>
+            <a href="/odin-recipes/Jambalaya.html">Jambalaya</a>
+    
+        </li>
+        <li>
+            <a href="/odin-recipes/mac-cheese.html">New Orleans Mac and Cheese</a>
+        </li>
+    </ul>
+   
+     
 
 
 </body>
